ingress-nginx/example/tmp.yaml

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: tmp
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: tmp
    spec:
      nodeSelector:
        kubernetes.io/hostname: 192.168.5.86
      containers:
        - name: tmp
          image: nginx:latest
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - mountPath: /etc/nginx/nginx.conf
              name: tmp-config
              subPath: etc/nginx/nginx.conf
          ports:
            - containerPort: 80
      volumes:
        - name: tmp-config
          configMap:
            name: tmp-cm
            items:
            - key: nginx.conf
              path: etc/nginx/nginx.conf
