ingress-nginx/example/nginx-nodeport-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-tmp
  labels:
    app: nginx-tmp
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
    nodePort: 8888
