ingress-nginx/example/my-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
#    nginx.ingress.kubernetes.io/limit-connections: "300"
#    nginx.ingress.kubernetes.io/limit-rps: "300"
#    nginx.ingress.kubernetes.io/limit-rpm: "300"
    nginx.ingress.kubernetes.io/limit-whitelist: "192.168.7.0/24"
spec:
  rules:
  - host: my.test.com
    http:
      paths: 
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
